--- a/src/Components/Table/Table.module.scss
+++ b/src/Components/Table/Table.module.scss
@@ -1,43 +1,45 @@
+@import "../../assets/style/vars";
 
-@import '../../assets/style/vars';
-
-*{
+* {
   font-family: $font-table;
 }
 
-.td{
-  width:300px;
+.td {
+  font-size: 20px;
+  min-width: 100px;
+  width: 300px;
   height: 30px;
   border: 1px solid $maingreen-color;
   border-radius: 3px;
 }
-.td:last-child{
+.td:last-child {
   display: flex;
   justify-content: space-around;
 }
-.ico{
-  width:20px;
-  height:20px;
+.ico {
+  width: 20px;
+  height: 20px;
 }
-.ico:hover{
+.ico:hover {
   opacity: 0.8;
 }
-.btn{
-  width:20px;
-  height:20px;
+.btn {
+  width: 20px;
+  height: 20px;
   border: none;
   cursor: pointer;
   background-color: transparent;
 }
-.btn_none{
+.btn_none {
   display: none;
 }
-.translate{
+.translate {
   display: none;
 }
-.input{
-width: 300px;;
-border-radius: 5px;
-border: none;
-background-color: transparent;
+.input {
+  min-width: 100px;
+  max-width: 300px;
+  border-radius: 5px;
+  border: none;
+  background-color: transparent;
 }
